--- a/css/styles.css
+++ b/css/styles.css
@@ -573,7 +573,6 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    gap: 16px;
     border-radius: 4px;
     padding: 8px 24px;
     min-width: 165px;
@@ -589,6 +588,9 @@ body {
   }
   
   .modal-overlay {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
     background: rgba(46, 47, 66, 0.4);
     position: fixed;
     top: 0;
@@ -597,6 +599,12 @@ body {
     height: 100%;
     z-index: 999;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
   }
   
   .modal {
