--- a/css/styles.css
+++ b/css/styles.css
@@ -439,17 +439,17 @@ body {
   }
   
   /* --- footer --- */
-  .section-footer {
+  .s-footer {
     background-color: #2e2f42;
     padding: 100px 0;
   }
   
-  .section-footer-container {
+  .s-footer-container {
     display: flex;
     align-items: baseline;
   }
-
-  .section-footer-text {
+  
+  .s-footer-text {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
@@ -457,8 +457,8 @@ body {
     color: #f4f4fd;
     max-width: 264px;
   }
-
-  .section-footer-logo-link {
+  
+  .s-footer-logo-link {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -471,22 +471,21 @@ body {
     display: inline-block;
   }
   
-  .section-footer-logo-part-two {
+  .s-footer-logo-part-two {
     color: #f4f4fd;
   }
-
-  .section-footer-link-and-text {
+  
+  .s-footer-link-and-text {
     width: 264px;
     height: 112px;
     margin-right: 120px;
   }
   
-  .section-footer-social {
+  .s-footer-social {
     display: block;
   }
   
-  .section-footer-social-paragraph {
-    font-family: "Roboto", sans-serif;
+  .s-footer-social-paragraph {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -495,7 +494,7 @@ body {
     margin-bottom: 16px;
   }
   
-  .section-footer-social-list {
+  .s-footer-social-list {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -503,7 +502,7 @@ body {
     gap: 16px;
   }
   
-  .section-footer-social-list-item-link {
+  .s-footer-social-list-item-link {
     width: 100%;
     height: 100%;
     background-color: #4d5ae5;
@@ -514,20 +513,20 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
-  .section-footer-social-list-item-link:hover {
+  .s-footer-social-list-item-link:hover {
     background-color: #31d0aa;
   }
   
-  .section-footer-social-list-item-link:focus {
+  .s-footer-social-list-item-link:focus {
     background-color: #31d0aa;
     ;
   }
-
+  
   .s-subscribe {
     margin-left: 80px;
   }
   
-  .section-subscribe-caption {
+  .s-subscribe-caption {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -536,14 +535,14 @@ body {
     margin-bottom: 16px;
   }
   
-  .section-subscribe-form {
+  .s-subscribe-form {
     display: flex;
     gap: 24px;
   }
   
-  .section-subscribe-label {}
+  .s-subscribe-label {}
   
-  .section-subscribe-input {
+  .s-subscribe-input {
     font-weight: 400;
     font-size: 12px;
     line-height: 2.0;
@@ -558,11 +557,11 @@ body {
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   }
   
-  .section-subscribe-input::placeholder {
+  .s-subscribe-input::placeholder {
     color: #fff;
   }
   
-  .section-subscribe-button {
+  .s-subscribe-button {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -582,7 +581,7 @@ body {
     border: none;
   }
   
-  .section-subscribe-icon {
+  .s-subscribe-icon {
     margin-left: 16px;
     fill: #fff;
   }
@@ -605,6 +604,12 @@ body {
     opacity: 1;
     visibility: visible;
     pointer-events: all;
+  }
+  
+  .is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
   }
   
   .modal {
