--- a/css/styles.css
+++ b/css/styles.css
@@ -615,7 +615,7 @@ img {
   visibility: hidden;
 }
 
-.modal {
+.window {
   border-radius: 4px;
   width: 408px;
   min-height: 584px;
@@ -629,7 +629,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-button {
+.window-close-button {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -646,18 +646,18 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-button:hover,
-.modal-close-button:focus {
+.window-close-button:hover,
+.window-close-button:focus {
   background-color: #404bbf;
   border: none;
   fill: #ffffff;
 }
 
-.modal-close-icon {
+.window-close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-caption {
+.window-caption {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -667,13 +667,13 @@ img {
   margin-bottom: 16px;
 }
 
-.modal-form {}
+.window-form {}
 
 .modal-input-wrapper {
   margin-bottom: 8px;
 }
 
-.modal-label {
+.window-label {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -683,11 +683,11 @@ img {
   margin-bottom: 4px;
 }
 
-.modal-input-frame {
+.window-input-frame {
   position: relative;
 }
 
-.modal-input {
+.window-input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -698,11 +698,11 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus {
+.window-input:focus {
   border-color: #4D5AE5;
 }
 
-.modal-input-icon {
+.window-input-icon {
   position: absolute;
   left: 16px;
   top: 50%;
@@ -711,15 +711,15 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus+.modal-input-icon {
+.window-input:focus+.modal-input-icon {
   fill: #4D5AE5;
 }
 
-.modal-comment-wrapper {
+.window-comment-wrapper {
   margin-bottom: 16px
 }
 
-.modal-textarea {
+.window-textarea {
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
@@ -736,7 +736,7 @@ img {
   resize: none;
 }
 
-.modal-textarea::placeholder {
+.window-textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
@@ -744,11 +744,11 @@ img {
   color: rgba(46, 47, 66, 0.4);
 }
 
-.modal-textarea:focus {
+.window-textarea:focus {
   border-color: #4D5AE5;
 }
 
-.modal-checkbox-wrapper {
+.window-checkbox-wrapper {
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -760,14 +760,14 @@ img {
   margin-bottom: 24px;
 }
 
-.modal-checkbox {
+.window-checkbox {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   width: 16px;
   height: 16px;
 }
 
-.modal-checkbox-label {
+.window-checkbox-label {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -775,14 +775,14 @@ img {
   color: #8e8f99;
 }
 
-.modal-checkbox-label-link {
+.window-checkbox-label-link {
   line-height: 133%;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #4d5ae5;
 }
 
-.modal-checkbox-label-box {
+.window-checkbox-label-box {
   width: 16px;
   height: 16px;
   border-radius: 2px;
@@ -796,19 +796,19 @@ img {
   margin-right: 8px;
 }
 
-.modal-checkbox:checked+.modal-checkbox-label .modal-checkbox-icon {
+.window-checkbox:checked+.window-checkbox-label .window-checkbox-icon {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
 }
 
-.modal-checkbox:checked+.modal-checkbox-label .modal-checkbox-label-box {
+.window-checkbox:checked+.window-checkbox-label .window-checkbox-label-box {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
 }
 
-.modal-send-button {
+.window-send-button {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
