--- a/css/styles.css
+++ b/css/styles.css
@@ -615,7 +615,33 @@ img {
   visibility: hidden;
 }
 
-. {
+.modal-overlay {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  background: rgba(46, 47, 66, 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal {
   border-radius: 4px;
   width: 408px;
   min-height: 584px;
@@ -629,7 +655,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-button {
+.modal-close-button {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -646,18 +672,18 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-button:hover,
-.close-button:focus {
+.modal-close-button:hover,
+.modal-close-button:focus {
   background-color: #404bbf;
   border: none;
   fill: #ffffff;
 }
 
-.close-icon {
+.modal-close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.caption {
+.modal-caption {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -667,13 +693,13 @@ img {
   margin-bottom: 16px;
 }
 
-.form {}
+.modal-form {}
 
-.input-wrapper {
+.modal-input-wrapper {
   margin-bottom: 8px;
 }
 
-.label {
+.modal-label {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -683,11 +709,11 @@ img {
   margin-bottom: 4px;
 }
 
-.input-frame {
+.modal-input-frame {
   position: relative;
 }
 
-.input {
+.modal-input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -698,11 +724,11 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input:focus {
+.modal-input:focus {
   border-color: #4D5AE5;
 }
 
-.input-icon {
+.modal-input-icon {
   position: absolute;
   left: 16px;
   top: 50%;
@@ -711,15 +737,15 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input:focus+.modal-input-icon {
+.modal-input:focus+.modal-input-icon {
   fill: #4D5AE5;
 }
 
-.comment-wrapper {
+.modal-comment-wrapper {
   margin-bottom: 16px
 }
 
-.textarea {
+.modal-textarea {
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
@@ -736,7 +762,7 @@ img {
   resize: none;
 }
 
-.textarea::placeholder {
+.modal-textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
@@ -744,11 +770,11 @@ img {
   color: rgba(46, 47, 66, 0.4);
 }
 
-.textarea:focus {
+.modal-textarea:focus {
   border-color: #4D5AE5;
 }
 
-.checkbox-wrapper {
+.modal-checkbox-wrapper {
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -760,14 +786,14 @@ img {
   margin-bottom: 24px;
 }
 
-.checkbox {
+.modal-checkbox {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   width: 16px;
   height: 16px;
 }
 
-.checkbox-label {
+.modal-checkbox-label {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -775,14 +801,14 @@ img {
   color: #8e8f99;
 }
 
-.checkbox-label-link {
+.modal-checkbox-label-link {
   line-height: 133%;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #4d5ae5;
 }
 
-.checkbox-label-box {
+.modal-checkbox-label-box {
   width: 16px;
   height: 16px;
   border-radius: 2px;
@@ -796,19 +822,19 @@ img {
   margin-right: 8px;
 }
 
-.checkbox:checked+.window-checkbox-label .window-checkbox-icon {
+.modal-checkbox:checked+.modal-checkbox-label .modal-checkbox-icon {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
 }
 
-.checkbox:checked+.window-checkbox-label .window-checkbox-label-box {
+.modal-checkbox:checked+.modal-checkbox-label .modal-checkbox-label-box {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
 }
 
-.send-button {
+.modal-send-button {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
