--- a/css/styles.css
+++ b/css/styles.css
@@ -641,7 +641,7 @@ img {
   visibility: hidden;
 }
 
-.modal {
+.overlay {
   border-radius: 4px;
   width: 408px;
   min-height: 584px;
@@ -655,7 +655,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-button {
+.button {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -672,8 +672,8 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-button:hover,
-.modal-close-button:focus {
+.button:hover,
+.button:focus {
   background-color: #404bbf;
   border: none;
   fill: #ffffff;
