--- a/css/styles.css
+++ b/css/styles.css
@@ -589,7 +589,7 @@ img {
   fill: #fff;
 }
 
-.modal-overlay {
+.registr-overlay {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -615,7 +615,7 @@ img {
   visibility: hidden;
 }
 
-.modal-overlay {
+.registr-overlay {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -641,7 +641,7 @@ img {
   visibility: hidden;
 }
 
-.overlay {
+.registr {
   border-radius: 4px;
   width: 408px;
   min-height: 584px;
@@ -655,7 +655,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button {
+.registr-button {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -672,8 +672,8 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover,
-.button:focus {
+.registr-button:hover,
+.registr-button:focus {
   background-color: #404bbf;
   border: none;
   fill: #ffffff;
@@ -745,7 +745,7 @@ img {
   margin-bottom: 16px
 }
 
-.overlay-textarea {
+.registr-textarea {
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
@@ -762,7 +762,7 @@ img {
   resize: none;
 }
 
-.overlay-textarea::placeholder {
+.registr-textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
@@ -770,7 +770,7 @@ img {
   color: rgba(46, 47, 66, 0.4);
 }
 
-.overlay-textarea:focus {
+.registr-textarea:focus {
   border-color: #4D5AE5;
 }
 
