--- a/css/styles.css
+++ b/css/styles.css
@@ -655,7 +655,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.registr-button {
+.button {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -672,8 +672,8 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.registr-button:hover,
-.registr-button:focus {
+.button:hover,
+.button:focus {
   background-color: #404bbf;
   border: none;
   fill: #ffffff;
@@ -745,7 +745,7 @@ img {
   margin-bottom: 16px
 }
 
-.registr-textarea {
+.modal-textarea {
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
@@ -762,7 +762,7 @@ img {
   resize: none;
 }
 
-.registr-textarea::placeholder {
+.modal-textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
@@ -770,7 +770,7 @@ img {
   color: rgba(46, 47, 66, 0.4);
 }
 
-.registr-textarea:focus {
+.modal-textarea:focus {
   border-color: #4D5AE5;
 }
 
@@ -808,7 +808,7 @@ img {
   color: #4d5ae5;
 }
 
-.overlay-checkbox-label-box {
+.registr-overlay-checkbox-label-box {
   width: 16px;
   height: 16px;
   border-radius: 2px;
